# useful_scripts

./: .gitignore  .vimrc  README.md  create_git_repo.sh  create_git_user.sh  vim_config.sh  vscode_config.sh  vscode_config_extensions.sh
clang_format_view/: .clang-format  CMakeLists.txt  readme.md
clang_format_view/example/clang_format_view/: view.cpp
code_config/: index.md
docker/deploy_registry/: auto_deploy_registry.sh  example.sh  how_to-cn.txt  run_registry.sh
docker/jdk8/: Dockerfile  build.sh  how-to_cn.txt
essential_sources/: essential_sources.py  readme.md
gen_passwd/: gen_passwd.sh
gen_private_ca/: client.py  gen.sh  openssl.cnf  readme.md  readme.txt  server.go  ssl_certificates.md  tcpdump.sh  v3.ext
gen_private_ca/client/: client.py
gen_private_ca/server/: go.mod  server.go
git/: git_ssh_proxy.md  set_proxy.md
gitlab/: how_to-cn.md  install_gitlab_in_docker.sh
gitlab-runner/: example-register.sh  hot_to-cn.txt
gitlab-runner/example/ci-java/: .gitignore  .gitlab-ci.yml  Dockerfile  pom.xml
gitlab-runner/example/ci-java/src/main/java/com/muggle/: Calculate.java  CalculateApplication.java
gitlab-runner/example/ci-java/src/test/java/com/muggle/: CalculateTest.java
gitlab/docker/: how_to-cn.txt
gitolite/: hot_to-cn.txt  how_to-cn.txt  moving.md  moving.sh  setup.sh
gitosis/: how_to-cn.txt  setup.sh
golang/: goget.bat  goget.sh
gperf/: gperf_cpuprofile.sh
kernel/: build_kernel.sh  readme.md
mysql/: my.ini  readme.md
net/: modify_socket_buffer.sh
nvim/: build_nvim.sh  config_nvim.sh  init.vim  install_nvim.sh  nvim_from_vim.sh  readme.md
nvim/.vsnip/: c.json  go.json
nvim/ftplugin/: c.vim  go.vim  python.vim
ranger/: ranger.md
shadowsocks/: install.sh  polipo_config  server_config.json  server_run.sh  set_http_proxy.sh
shadowsocks/libev_ss/: client_config.json  client_install.sh  client_run.sh  config.json  copy_config.sh  readme.md  server_config.json  server_install.sh  server_run.sh  ss_libev_build.sh  ss_libev_prepare.sh
shadowsocks/py_ss/: client_config.json  client_run.sh  install_polipo.sh  set_http_proxy.sh
ssh_proxy/: ssh_proxy.md
swig/: build_foo.sh  example_pyfoo.py  gen_pyfoo.sh  readme.md
swig/cc_module/: CMakeLists.txt
swig/cc_module/src/foo/: foo.cpp  foo.h  foo_macro.h  foo_struct.h
swig/pyfoo/: CMakeLists.txt  foo.i
system/: add_sudo_user.sh  change_sources_list.md  clean_boot.sh  close_bell.md  code_config.md  control_remote.sh  core_format.sh  login_notify.md  login_notify.sh  modify_hostname.md  monitor_remote.sh  ps_kill.sh  show_open_file_num.sh  ssh_config.md
tmux/: .tmux.conf
v2ray/: client_config.json  manual_compile.sh  readme.md  server_config.json
vim/: .vimrc  configure_vim_compile.sh  readme.md  vim_config.sh
vim/ftplugin/: c.vim
vim/vim-plug/: .vimrc  vim_config.sh
vim/vim-plug/UltiSnips/: c.snippets  go.snippets
vim/vim-plug/ftplugin/: c.vim  python.vim
vim/vundle/: vim_config.sh
vim/vundle/ftplugin/: go.vim
vscode/snippets/: c.json  cpp.json
